--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "ionic-angular": "3.9.5",
+        "ionic": "^3.20.1",
+        "ionic-angular": "^3.9.2",
         "ionicons": "3.0.0",
+        "node": "^10.16.0",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.29"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.2",
+        "@ionic/lab": "2.0.0",
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
