--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/splash-screen": "~4.20.0",
         "@ionic-native/status-bar": "~4.20.0",
         "@ionic/storage": "2.2.0",
+        "angularfire2": "^4.0.0-rc.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -31,9 +32,11 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "firebase": "^3.9.0",
         "ionic": "^3.20.1",
         "ionic-angular": "^3.9.2",
         "ionicons": "3.0.0",
+        "ngx-order-pipe": "^2.0.2",
         "node": "^10.16.0",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
